commit before refactor for responsiveness

--- a/src/Components/NewProductDisplay/NewProductDisplay.css
+++ b/src/Components/NewProductDisplay/NewProductDisplay.css
@@ -1,68 +1,76 @@
 
 .container {
     background-color: #000000;
-    height: 78vh;
-    /* border-radius: 0 0 10px 10px; */
+    height: 74vh;
     box-shadow: 0 0 10px 0;
     border-radius: 0 0 10px 10px;
-    
 }
 
 .headPhonesImage {
     width: 100%;
     object-fit: cover;
-    object-position: 0vw -12vh; /* try 20px 10px */ 
-    filter: brightness(99%);
-    mix-blend-mode: normal;
-    opacity: .7;
+    object-position: 0vw -16vh; /* try 20px 10px */ 
+    filter: brightness(60%);
+    /* mix-blend-mode: normal; */
+    /* opacity: .7; */
 }
 
 .newProductContainer {
-    margin-top: -70vh;
-    margin-left: 23vw;
-    position: absolute;
+    margin-top: -76vh;
+    text-align: center;
 }
 
 .newProductText {
-    letter-spacing: 3vw;
-    /* align-content: center;
-    text-align: center; */
-    font-size: 12px;
+    letter-spacing: 2.5vw;
+    font-size: 3vw;
     opacity: .45;
     color: #FFFFFF;  
+    padding-left: 10px;
+    margin-bottom: 15px;
 }
 
 .headPhonesName {
     color: #FFFFFF;
     line-height: 30px;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1vw;
     font-size: 25px;
-    margin: 10px 0 0 5px;
+    opacity: .9;
+    margin-bottom: 3vh;
+    padding: 0 10vw 0 10vw;
 }
 
 .headPhonesParagraph {
     color: #FFFFFF;
     font-size: 13px;
-    align-content: center;
-    margin: 20px 10px 0px -50px;
-    font-weight: initial;
+    padding: 0 10vw 0 10vw;
     line-height: 20px;
     mix-blend-mode: normal;
-    opacity: .5;
-    text-align: center;
+    opacity: .7;
     letter-spacing: .5px;
+    margin-bottom: 5vh;
 }
 
 .btnProductInfo {
-    background-color: #D87D4A;
-
+    background-color: #da753a;
     color: white;
-    width: 140px;
-    height: 48px;
-    letter-spacing: 2px;
+    width: 45vw;
+    height: 7vh;
+    font-weight: 700;
+    letter-spacing: 2.5px;
     font-size: 10px;
-    line-height: 25px;
+    line-height: 19px;
     border-style: none;
-    margin: 20px 0 0 20px;
+    filter: brightness(100%);
+    mix-blend-mode: normal; 
+}
+
+@media (min-width: 413px) {
+    .headPhonesParagraph{
+        margin-top: 4vh;
+    }
+
+    .headPhonesName {
+        margin-top: 3vh;
+    }
 }
