refactored header and images

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,221 @@
-* {
-  font-family: 'Manrope', sans-serif;
+html,
+body {
   margin: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Manrope', sans-serif;
 }
 
+.divtest {
+  margin: 1000px 0 1000px 0;
+}
+.product-container {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.hrDesktop {
+  display: none;
+}
+.imageContainer {
+  background-image: url("./assets/image-header.jpg");
+  background-repeat:no-repeat;
+  background-size:contain;
+  background-position:center center;
+  height: 500px;
+   /* Cant be 100 or causes text to shift when scrolling */
+}
+@media screen and (min-width: 300px){ 
+  .imageContainer {
+    background-image: url("./assets/image-header.jpg");
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position:center top;
+    height: 1000px;
+
+  }}
+
+
+@media screen and (min-width: 430px){ 
+.imageContainer {
+  background-image: url("./assets/image-header.jpg");
+  background-repeat:no-repeat;
+  background-size:contain;
+  background-position:center top;
+  height: 1000px;
+}}
+
+@media screen and (min-width: 600px){ 
+  .imageContainer {
+    background-image: url("./assets/image-header-tablet.jpg"); /* Maybe use mobile image here */
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center center;
+    height: 800px;
+  }}
+
+@media screen and (min-width: 800px){ 
+  .imageContainer {
+    background-image: url("./assets/image-header-tablet.jpg");
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center center;
+    height: 1000px;
+  }}
+
+@media screen and (min-width: 1000px){ 
+    .imageContainer {
+      background-image: url("./assets/image-header-tablet.jpg");
+      background-repeat:no-repeat;
+      background-size:cover;
+      background-position:center center;
+      height: 1200px;
+    }}
+@media screen and (min-width: 1200px){ 
+  .imageContainer {
+    background-image: url("./assets/image-header-tablet.jpg");
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center top;
+    height: 1400px;
+  }
+  .hrDesktop {
+    display: block;
+    margin: 0 8vw 0 8vw;
+  }}
+
+  @media screen and (min-width: 1400px){ 
+    .imageContainer {
+      background-image: url("./assets/image-hero.jpg");
+      background-repeat:no-repeat;
+      background-size:cover;
+      background-position:center top;
+      height: 1200px;
+    }}
+
+@media screen and (min-width: 2000px){ 
+  .imageContainer {
+      background-image: url("./assets/image-hero.jpg");
+      background-repeat:no-repeat;
+      background-size:cover;
+      background-position:center top;
+      height: 2000px;
+  } 
+}
+
+@media screen and (min-width: 3500px){ 
+  .imageContainer {
+      background-image: url("./assets/image-hero.jpg");
+      background-repeat:no-repeat;
+      background-size:cover;
+      background-position:center top;
+      height: 2500px;
+  } 
+}
+  
+
+
+
+  /* 
+img {
+  background-size: cover;
+  background-color: red;
+  max-width: 100%;
+  z-index: 1;
+  display: inline-block;
+} */
+
+/* * {
+  font-family: 'Manrope', sans-serif;
+  margin: 0;
+} */
+
+/* REQUIRED FOR MEDIA QUERY TO WORK <meta name="viewport" content="width=device-width, initial-scale=1.0"> */
+
+/* .parentContainer { */
+  
+  /* width: 500px;
+  margin-bottom: 500px;
+  background-color: red;
+  filter: brightness(60%); */
+/* } */
+
+/* .mobileBackgroundImage {
+  min-height: 100vh;
+  background-image: url("./assets/image-header.jpg");
+  margin-bottom: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;  
+  background-position: center top;
+} */
+/* @media screen and (min-height: 424px) and (min-width: 270px){ 
+  .mobileBackgroundImage {
+  min-height: 100vh;
+  background-image: url("./assets/image-header.jpg");
+  margin-bottom: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;  
+  background-position: center top;
+  background-color: #161616;
+  }
+} */
+
+/* height less than 430 width > 258 */
+/* @media screen and (max-height: 424px) and (min-width: 200px){ 
+  .mobileBackgroundImage {
+  min-height: 100vh;
+  background-image: url("./assets/image-header.jpg");
+  margin-bottom: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;  
+  background-position: center top;
+  background-color: black;
+  }
+  } */
+
+/* @media screen and (min-height: 428px) and (min-width: 258px) and (max-width: 566) { 
+  .mobileBackgroundImage {
+  min-height: 100vh;
+  background-image: url("./assets/image-header.jpg");
+  margin-bottom: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;  
+  background-position: center top;
+  background-color: #161616;
+  }
+}  */
+
+
+
+/* @media screen and (min-width: 600px){
+  .mobileBackgroundImage {
+    background-image: url("./assets/image-header-tablet.jpg");
+    margin-bottom: 500px;
+    min-height: 100vh;
+    background-size: contain;
+    background-repeat: no-repeat; 
+    /* background-color:#161616; */
+    /* background-position: center top; */
+
+  /* }
+}  */
+
+
+/* .tabletBackgroundImage {
+  background-image: url("./assets/image-header-tablet.jpg");
+  margin-bottom: 500px;
+  min-height: 100vh;
+  background-size: contain;
+  background-repeat: no-repeat; 
+}  */
+
+/* .imageTag {
+  height: 500px;
+  width: 100%;
+  object-fit: cover;
+  background-color: red;
+} */
+
+/*background color to match header image for #161616 */
