--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -10,7 +10,7 @@
     border-style: none;
     filter: brightness(100%);
     mix-blend-mode: normal; 
-    padding-left: 8px;
+    padding-left: 8px;  
 }
 
 .btnProductInfoBlackTheme {
@@ -51,32 +51,80 @@
         letter-spacing: 2px;
         font-size: 11px;
     }
+    .btnProductInfoTransparentTheme {
+      width: 130px;
+      height: 40px;
+      letter-spacing: 2px;
+      font-size: 11px;
+    }
+    .btnProductInfoBlackTheme {
+      width: 130px;
+      height: 40px;
+      letter-spacing: 2px;
+      font-size: 11px;
+    }
 }
 
 @media screen and (min-width: 500px) {
   .btnProductInfoOrangeTheme {
-      width: 200px;
-      height: 60px;
+      width: 120px;
+      height: 50px;
       letter-spacing: 1.5px;
-      font-size: 14px;
+      font-size: 10px;
+  }
+  .btnProductInfoTransparentTheme {
+      width: 120px;
+      height: 50px;
+      letter-spacing: 1.5px;
+      font-size: 10px;
+}
+  .btnProductInfoBlackTheme {
+      width: 120px;
+      height: 50px;
+      letter-spacing: 1.5px;
+      font-size: 10px;
   }
 }
 
 @media screen and (min-width: 1000px) {
   .btnProductInfoOrangeTheme {
-      width: 260px;
-      height: 80px;
-      letter-spacing: 2.4px;
-      font-size: 25px;
+    width: 240px;
+    height: 70px;
+    letter-spacing: 2px;
+    font-size: 20px;
+  }
+  .btnProductInfoBlackTheme {
+    width: 240px;
+    height: 70px;
+    letter-spacing: 2px;
+    font-size: 20px;
+  }
+  .btnProductInfoTransparentTheme {
+    width: 240px;
+    height: 70px;
+    letter-spacing: 2px;
+    font-size: 20px;
   }
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 2000px) {
   .btnProductInfoOrangeTheme {
       width: 300px;
       height: 100px;
       letter-spacing: 3.5px;
       font-size: 27px;
+  }
+  .btnProductInfoTransparentTheme {
+    width: 300px;
+    height: 100px;
+    letter-spacing: 3.5px;
+    font-size: 27px;
+  }
+  .btnProductInfoBlackTheme {
+    width: 300px;
+    height: 100px;
+    letter-spacing: 3.5px;
+    font-size: 27px;
   }
 }
 
@@ -87,6 +135,18 @@
       letter-spacing: 6px;
       font-size: 34px;
   }
+  .btnProductInfoTransparentTheme {
+    width: 400px;
+    height: 150px;
+    letter-spacing: 6px;
+    font-size: 34px;
+  }
+  .btnProductInfoBlackTheme {
+    width: 400px;
+    height: 150px;
+    letter-spacing: 6px;
+    font-size: 34px;
+  } 
 }
 
 @media screen and (min-width: 4000px) {
@@ -95,6 +155,18 @@
       height: 200px;
       letter-spacing: 8px;
       font-size: 45px;
+  }
+  .btnProductInfoTransparentTheme {
+    width: 550px;
+    height: 200px;
+    letter-spacing: 8px;
+    font-size: 45px;
+  }
+  .btnProductInfoBlackTheme {
+    width: 550px;
+    height: 200px;
+    letter-spacing: 8px;
+    font-size: 45px;
   }
 }
 
