--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,12 +1,17 @@
 .header {
-    height: 100px;
-    background-color:transparent;
+    height: 60px;
     display: flex;
     justify-content: space-around; 
     align-items: center; 
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid grey;
 }
 
+.background-black {
+    background-color: #161616;
+}
+.background-transparent {
+    background-color: transparent;
+}
 .desktop-header {
   display: none;
 }
@@ -21,69 +26,73 @@
     order: 3;
 } 
 
-/* @media screen and (max-width: 300px){ 
-  .header {
 
-  }}
-   */
-  
 @media screen and (min-width: 600px){ 
   .header {
-    height: 12%; 
-    justify-content: none;
-    border-bottom: 1px solid white;
-}
-.iconBurger {
-  height: 2.5vh;
-}
-.iconLogo {
-  height: 3.5vh;
-  margin-left: -10vw;
-}
-.iconCart {
-  height: 3vh;
-  margin-left: 40vw;
-} 
+      height: 120px; 
+      border-bottom: 1px solid grey;
+      max-width: 100%;
+  }
+
+  .iconBurger {
+      height: 30px;  
+      margin-right: -10vw;
+  }
+  .iconLogo {
+      height: 30px;
+    
+  }
+  .iconCart {
+      height: 40px;
+      margin-left: 30%;
+  } 
+
 }
   
 @media screen and (min-width: 1400px){ 
   .header {
-    height: 12%; 
-    justify-content: none;
-    border-bottom: none;
+      height: 120px; 
+      justify-content: none;
+      border-bottom: none;
+      padding-left: 5%;
+      max-width: 100%;
+  }
 
-}
-.iconBurger {
-  display: none;
-}
-.iconLogo {
-  height: 4vh;
-  margin-left: 2.4vw;
-  order: 1;
+  .iconBurger {
+      display: none;
+  }
 
-}
-.iconCart {
-  height: 3vh;
-  margin-left: 5vw;
-  padding-right: 2vw;
-  order: 3;
-} 
-.desktop-header {
-  display: flex;
-  color: red;
-  order: 2;
-}
+  .iconLogo {
+      height: 3vh;
+      order: 1;
+      margin-left: -3vw;
+      margin-right: 3vw;
+  }
 
-.desktop-menu-items {
-  list-style-type: none;
-  justify-content: space-around;
-  font-size: 1.1vw;
-  letter-spacing: 3px;
-  margin-right: 2.5vw;
-  align-content: space-around;
-  color: white;
-  font-weight: bolder;
-}
+  .iconCart {
+      height: 3vh;
+      order: 3;
+      margin-left: 0 ;
+      margin-right: 1vw;
+  } 
+
+  .desktop-header {
+      display: flex;
+      order: 2;
+      margin-right: 0px;
+  }
+
+  .desktop-menu-items {
+      list-style-type: none;
+      justify-content: space-around;
+      font-size: 1.2vw;
+      letter-spacing: 3px;
+      margin-right: 1.5vw;
+      align-content: space-around;
+      color: white;
+      font-weight: bolder;
+  }
+
 }
   
 
