--- a/src/Components/ShopItemList/IndividualItem/IndividualItem.css
+++ b/src/Components/ShopItemList/IndividualItem/IndividualItem.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
     box-sizing: border-box;
 }
 
@@ -11,7 +10,8 @@
     margin: 70px 0px 30px 0px;
     border-style: none;
     border-color: #F1F1F1;
-    height: 165px;
+    height: auto;
+    width: 100%;
     border-radius: 10px;
     align-content: center;
     align-items: center;
@@ -52,7 +52,7 @@
     letter-spacing: 2px;
 }
 
-@media screen and (min-width: 300px) and (max-width: 341px) {
+/* @media screen and (min-width: 300px) and (max-width: 400px) {
     .items-container {
         margin-top: -100px;     
     } 
@@ -68,13 +68,13 @@
     .items-container {
         margin-top: -110px;     
     } 
-}
+} */
 
-@media screen and (min-width: 550px) {
+/* @media screen and (min-width: 550px) {
     .items-container {
         margin-top: 0px;     
     } 
-}
+} */
 
 @media screen and (min-width: 600px) {
     .items-container {
@@ -165,7 +165,7 @@
 
 @media screen and (min-width: 1500px) {
   .items-container {
-    margin-top: 150px;
+    /* margin-top: 150px; */
   }
   .IndividualItemContainer {
       height: 300px;
@@ -248,7 +248,7 @@
 
 @media screen and (min-width: 3000px) {
   .items-container {
-    margin-top: 200px;
+    /* margin-top: 200px; */
   }
   .IndividualItemContainer {
       height: 700px;
