--- a/src/Components/ProductDetailsInfo/ProductDetailsInfo.css
+++ b/src/Components/ProductDetailsInfo/ProductDetailsInfo.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   margin-top: 50px;
   margin-bottom: 50px;
-  max-width: 1200px;
+  max-width: 100%;
   box-sizing: border-box;
 }
 
@@ -89,6 +89,12 @@
   margin-top: 10px;
 }
 
+.ProductDetailsInfoImageGroup {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  justify-content: center;
+}
 
 /* 
 @media screen and (min-width: 600px) {
