--- a/src/Components/ProductDetailsPage/ProductDetailsPage.css
+++ b/src/Components/ProductDetailsPage/ProductDetailsPage.css
@@ -1,3 +1,19 @@
 .individual-item-container {
   margin-top: -90px;
 }
+
+@media screen and (min-width: 1400px) {
+  .desktop-width {
+      display: flex;
+      justify-content: center;
+      width: 1120px;
+      margin: 0 auto;
+  }
+  .display-block {
+      display: block;
+  }
+  .container-padding {
+    padding: 0;
+  }
+}
+
