--- a/src/Components/RecommendedProducts/RecommendedProducts.css
+++ b/src/Components/RecommendedProducts/RecommendedProducts.css
@@ -29,5 +29,34 @@
 }
 
 .RecommendedProductsButton {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+
+@media screen and (min-width: 600px) {
+  .RecommendedProductsContainer {
+      display: flex;
+      flex-direction: column;
+      margin-top: 50px;
+      margin-bottom: 0px;
+      max-width: 100%;
+      box-sizing: border-box;
+      text-align: center;
+      align-items: center;
+  }
+  .RecommendedProductsIndividualProductContainer:nth-of-type(2) {
+      margin: 0 10px 0 10px;
+  }
+
+  .RecommendedProductsFlexContainer {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+  }
+
+  .RecommendedProductsProductHeading {
+      font-size: 24px;
+      letter-spacing: 3px;
+      font-weight: 900;
+      margin-top: 20px;
+  }
 }
