--- a/src/Components/ProductDetailsPage/ProductDetailsPage.css
+++ b/src/Components/ProductDetailsPage/ProductDetailsPage.css
@@ -12,7 +12,7 @@
   .display-block {
       display: block;
   }
-  .container-padding {
+  .container-padding-product-details{
     padding: 0;
   }
 }
