--- a/src/Components/Counter/Counter.css
+++ b/src/Components/Counter/Counter.css
@@ -14,14 +14,13 @@
 
 .Counter {
 margin-top: 13px;
-margin-right: 20px;
 }
 
 .CounterMinus {
-  margin-left: 20px;
+  margin-left: 20%;
 }
 
 .CounterNumber {
-  margin-left: 22px;
-  margin-right: 24px;
+  margin-left: 15%;
+  margin-right: 15%;
 }
